fix:  modals are now also above buttons that have a z-index on hover

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -247,3 +247,8 @@ body.theme-light :host .navbar-item .icon {
     background-color: var(--bulma-link);
     color: var(--white-dark-87);
 }
+
+.modal-fix {
+    position: fixed;
+    z-index: 100;
+}
